--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <section class="hero-text-box">
         <h1 class="hero-heading">It's not JUST art</h1>
-        <p class="hero-text">Kinda dark, but also kinda not</p>
+        <p class="hero-text">How I'm doing is none of my business</p>
         <p><button class="hero-button">View Portfolio</button></p>
     </section>
 </header>    
