--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="hero-body">
 <header class="hero-box">
     <section class="hero-image-box">
-        <video src="video/production ID_4761878.mp4" class="hero-video" autoplay muted loop>
+        <video src="video/walk.mp4" class="hero-video" autoplay muted loop>
     </section>
 
     <nav class="nav-bar hero-nav">
