--- a/portfolio.html
+++ b/portfolio.html
@@ -72,5 +72,9 @@
 </section>
 <p class="footer-copyright">Copyright &copy; 2020</p>
 </footer>
+<script src="js/glightbox.min.js"></script>
+<script type="text/javascript">
+const lightbox = Glightbox({loop: true});
+</script>
 </body>
 </html>
