--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
 </footer>
 <script src="js/glightbox.min.js"></script>
 <script type="text/javascript">
-const lightbox = Glightbox({loop: true});
+const lightbox = GLightbox({loop: true});
 </script>
 </body>
 </html>
