added link to button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="hero-text-box">
         <h1 class="hero-heading">It's not JUST art</h1>
         <p class="hero-text">How I'm doing is none of my business</p>
-        <p><button class="hero-button">View Portfolio</button></p>
+        <p><a href="portfolio.html"><button class="hero-button">View Portfolio</button></p>
     </section>
 </header>    
 <footer>
