--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
 
 <main class="about-page">
     <section class="about-text">
-        <h1>Mason makes art sometimes, you might like it</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus architecto vel numquam obcaecati? Laudantium reprehenderit, rem numquam dolore blanditiis dicta corporis. Soluta enim cupiditate, temporibus sed iusto autem esse fuga sit nesciunt nam, libero voluptates!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nostrum eius est, suscipit voluptatibus quae placeat maiores quis doloremque excepturi, eos, aliquid commodi?</p>
-        <p>masonpk14@gmail.com</p>
+        <h1>Lil bit about me</h1>
+        <p>As a freshman at the Cleveland Institute of Art, my intended major is photography. That's definitely subject to change, as I enjoy working with a large majority of mediums.</p>
+        <p>My style varies quite a bit depending on my mood, and the medium I'm working in. I mostly enjoy working with graphite and charcoal, as well as paint and pastels. Regardless of my experience with the medium, I love trying new techniques and experiementing with different subjects</p>
+        <a href="mailto:masonpk14@gmail.com">Contact Me</a>
     <section class="about-social">
         <a href="https://twitter.com/masonnaiseburps" aria-label="Link to Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
             <a href="https://instagram.com/mason.paul.art" aria-label="Link to Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
@@ -39,7 +39,7 @@
     </section>
 </section>
     <section class="about-image">
-        <img src="img/drives.jpg" alt="Car in the rain">
+        <img src="img/mason-paul-mason.jpg" alt="Car in the rain">
     </section>
 </main>
 
