--- a/index.html
+++ b/index.html
@@ -27,26 +27,13 @@
         </ul>
     </nav>
     <section class="hero-text-box">
-        <h1 class="hero-heading">It's not JUST art</h1>
-        <p class="hero-text">How I'm doing is none of my business</p>
-        <p><a href="portfolio.html"><button class="hero-button">View Portfolio</button></p>
+        <h1 class="hero-heading">This Might Be Art</h1>
+        <p class="hero-text">See For Yourself</p>
+        <p><a href="portfolio.html"><button class="hero-button">Explore</button></p>
     </section>
 </header>    
 <footer>
-    <nav class="nav-bar footer-nav">
-        <ul class="nav-menu">
-            <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-            <li class="nav-item"><a href="shop.html">Shop</a></li>
-            <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item logo footer-logo"><a href="index.html">Mason Paul</a></li>
-            </ul>
-            </nav>
-<section class="footer-social">
-    <a href="https://twitter.com/masonnaiseburps" aria-label="Link to Twitter"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
-            <a href="https://instagram.com/mason.paul.art" aria-label="Link to Instagram"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
-            <a href="https://github.com/mpkovacs14" aria-label="Link to Github"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
-            <a href="https://pinterest.com/masonpk14" aria-label="Link to Pinterest"><i class="fab fa-pinterest fa-3x" aria-hidden="true"></i></a>
-</section>
+    
 <p class="footer-copyright">Copyright &copy; 2020</p>
 </footer>
 </body>
