--- a/portfolio.html
+++ b/portfolio.html
@@ -28,29 +28,105 @@
 <main class="gallery-page">
     <h1>Portfolio</h1>
     <section class="portfolio-gallery gallery-span">
-        <div class="gallery-item w-3">
+        <div class="gallery-item w-2">
             <a href="img/mason-paul-jareds.jpg" class="glightbox"><img src="img/mason-paul-jareds.jpg" alt="Tristen at Jareds" title="Tristen" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item w-2">
             <a href="img/mason-paul-drives.jpg" class="glightbox"><img src="img/mason-paul-drives.jpg" alt="Red light" title="Red light" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
         <div class="gallery-item w-2">
             <a href="img/mason-paul-leah.jpg" class="glightbox"><img src="img/mason-paul-leah.jpg" alt="Leah" title="Leah" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
-        <div class="gallery-item">
-            <a href="img/mason-paul-red.jpg" class="glightbox"><img src="img/mason-paul-red.jpg" alt="Car at the drive-ins" title="Car" class="gallery-img"></a>
-        </div>
-        <div class="gallery-item w-4">
+        <div class="gallery-item w-2">
             <a href="img/mason-paul-leah2.jpg" class="glightbox"><img src="img/mason-paul-leah2.jpg" alt="More Leah" title="Leah Again" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item w-2">
             <a href="img/mason-paul-window.jpg" class="glightbox"><img src="img/mason-paul-window.jpg" alt="Tristen in the window" title="Tristen in a window" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
-        <div class="gallery-item w-4">
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-red.jpg" class="glightbox"><img src="img/mason-paul-red.jpg" alt="Car at the drive-ins" title="Car" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
             <a href="img/mason-paul-waves.jpg" class="glightbox"><img src="img/mason-paul-waves.jpg" alt="Waves on the beach" title="Splashy waves" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
         <div class="gallery-item w-2">
             <a href="img/mason-paul-woods.jpg" class="glightbox"><img src="img/mason-paul-woods.jpg" alt="Plants in the woods" title="Plants" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-skull.jpg" class="glightbox"><img src="img/mason-paul-skull.jpg" alt="Acrylic Skull Painting" title="Skull Painting" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Acrylic on Canvas</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-portrait.jpg" class="glightbox"><img src="img/mason-paul-portrait.jpg" alt="charcoal portrait" title="Self Portrait" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Charcoal and Pastel</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-webs.jpg" class="glightbox"><img src="img/mason-paul-webs.jpg" alt="Dew Drops on a spiderweb" title="Spiderweb" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-midge.jpg" class="glightbox"><img src="img/mason-paul-midge.jpg" alt="Midge" title="Midge" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-more-midge.jpg" class="glightbox"><img src="img/mason-paul-more-midge.jpg" alt="Midge" title="Midge" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-mirror.jpg" class="glightbox"><img src="img/mason-paul-mirror.jpg" alt="Photo of a rerview mirror" title="Mirror" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-woman.jpg" class="glightbox"><img src="img/mason-paul-woman.jpg" alt="Drawing of a womans face" title="Squiggly Woman" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Marker and Ink</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-sun.jpg" class="glightbox"><img src="img/mason-paul-sun.jpg" alt="Sun rise through a window" title="Sunrise" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-heather.jpg" class="glightbox"><img src="img/mason-paul-heather.jpg" alt="Heather" title="Heather" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-mouth.jpg" class="glightbox"><img src="img/mason-paul-mouth.jpg" alt="Drawing of a smokey mouth" title="Mouth" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Marker and Ink</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-pot.jpg" class="glightbox"><img src="img/mason-paul-pot.jpg" alt="Ceramic Pot" title="Pot" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Ceramics</p>
+        </div>
+        <div class="gallery-item w-2">
+            <a href="img/mason-paul-water.jpg" class="glightbox"><img src="img/mason-paul-water.jpg" alt="Water" title="Water" class="gallery-img"></a>
+            <p>Medium:</p>
+            <p>Photo</p>
         </div>
     </section>
 </main>
