--- a/shop.html
+++ b/shop.html
@@ -26,8 +26,7 @@
 </header>    
 <main class="shop-page"><section class="text-box">
     <h1>Shop</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa dolorem delectus accusantium. Recusandae aspernatur cumque culpa vel minus commodi aut quasi facere vero fugit. Totam?
-    </p>
+    <p>Check out some items :)</p>
 </section>
 <section class="shop-box">
     <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
@@ -41,46 +40,22 @@
         <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
     </div>
     <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
+        <a href="https://www.redbubble.com/i/iphone-case/Squiggly-Woman-by-Mason-K/63095152.PGM2E?asc=u"><img src="img/work-63095152-iphone-soft-case.jpg" alt="Phone Case"></a>
+        <h2>Wavey Woman Phone Case</h2>
+        <p>This unique phone case will definitely get some stares</p>
+        <a href="https://www.redbubble.com/i/iphone-case/Squiggly-Woman-by-Mason-K/63095152.PGM2E?asc=u">Buy Now</a>
     </div>
     <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
+        <a href="hhttps://www.redbubble.com/i/mug/Web-by-Mason-K/63095013.V33QC?asc=u"><img src="img/work-63095013-travel-mug.jpg" alt="Mug"></a>
+        <h2>Wintery Tumbler</h2>
+        <p>Perfect for keeping festive drinks warm</p>
+        <a href="https://www.redbubble.com/i/mug/Web-by-Mason-K/63095013.V33QC?asc=u">Buy Now</a>
     </div>
     <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
-    </div>
-    <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
-    </div>
-    <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
-    </div>
-    <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
-    </div>
-    <div class="shop-item">
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u"><img src="img/work-62976048-clock.jpg" alt="Wavey Clock"></a>
-        <h2>Wavey Clock</h2>
-        <p>This beachy clock is perfect for keeping track of the time</p>
-        <a href="https://www.redbubble.com/i/clock/Wavey-by-Mason-K/62976048.1X49C?asc=u">Buy Now</a>
+        <a href="https://www.redbubble.com/i/postcard/Behind-by-Mason-K/63095404.V7PMD?asc=u"><img src="img/work-63095404-postcard.jpg" alt="Postcard"></a>
+        <h2>Mirror Postcard</h2>
+        <p>Let that awful someone know they're being left in your past</p>
+        <a href="https://www.redbubble.com/i/postcard/Behind-by-Mason-K/63095404.V7PMD?asc=u">Buy Now</a>
     </div>
 </section>
 </main>
